Please view this file on the master branch, on stable branches it's out of date.

v 8.11.0 (unreleased)
  - Fix the title of the toggle dropdown button. !5515 (herminiotorres)
  - Improve diff performance by eliminating redundant checks for text blobs
  - Convert switch icon into icon font (ClemMakesApps)
  - Remove magic comments (`# encoding: UTF-8`) from Ruby files. !5456 (winniehell)
  - Add support for relative links starting with ./ or / to RelativeLinkFilter (winniehell)
  - Fix CI status icon link underline (ClemMakesApps)
  - The Repository class is now instrumented
  - Cache the commit author in RequestStore to avoid extra lookups in PostReceive
  - Expand commit message width in repo view (ClemMakesApps)
  - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
  - Add support for using RequestStore within Sidekiq tasks via SIDEKIQ_REQUEST_STORE env variable
  - Optimize maximum user access level lookup in loading of notes
  - Add "No one can push" as an option for protected branches. !5081
  - Environments have an url to link to
  - Limit git rev-list output count to one in forced push check
  - Clean up unused routes (Josef Strzibny)
  - Add green outline to New Branch button. !5447 (winniehell)
  - Update to gitlab_git 10.4.1 and take advantage of preserved Ref objects
  - Remove delay when hitting "Reply..." button on page with a lot of discussions
  - Retrieve rendered HTML from cache in one request
  - Fix renaming repository when name contains invalid chararacters under project settings
  - Optimize checking if a user has read access to a list of issues !5370
  - Nokogiri's various parsing methods are now instrumented
  - Add simple identifier to public SSH keys (muteor)
  - Add a way to send an email and create an issue based on private personal token. Find the email address from issues page. !3363
  - Include old revision in merge request update hooks (Ben Boeckel)